<resources>
    <string name="app_name">DailyScoop</string>
    <string name="title_home">달력</string>
    <string name="title_dashboard">모아보기</string>
    <string name="title_notifications">기록</string>
    <string name="title_profile">내 정보</string>
    <string name="action_setting">설정</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="close">닫기</string>
    <string name="back">뒤로가기</string>
    <string name="calender">달력</string>
    <string name="grid">그리드</string>
    <string name="dialog_withdrawal_title">계정 삭제</string>
    <string name="dialog_withdrawal_message">계정 삭제를 진행하시겠습니까? 모든 데이터가 삭제됩니다.</string>
    <string name="title_overall">이번 달 가장 많이 표현한 감정은 00 입니다.</string>
    <string name="detail">더보기</string>
    <string name="year_picker_formatter" translatable="false">%04d</string>
    <string name="month_picker_formatter" translatable="false">%02d</string>
    <string name="spoqa_light" translatable="false">sans-serif-light</string>
    <string name="dialog_datepick_title">몇 년 몇 월의 일기를 찾으시나요?</string>
    <string name="dialog_emotion_title">오늘 하루는 어떤 맛인가요?</string>
    <string name="emotion_happy">행복</string>
    <string name="emotion_relax">여유</string>
    <string name="emotion_angry">분노</string>
    <string name="emotion_fun">재미</string>
    <string name="emotion_joy">즐거움</string>
    <string name="emotion_sound">평온</string>
    <string name="emotion_expect">기대</string>
    <string name="emotion_bored">심심</string>
    <string name="emotion_sad">슬픔</string>
    <string name="emotion_nervous">긴장</string>
    <string name="emotion_tired">피곤</string>
    <string name="emotion_anxious">불안</string>
    <string name="theme_paper_ivory">종이(미색)</string>
    <string name="theme_paper_white">종이(흰색)</string>
    <string name="theme_paper_black">종이(검정색)</string>
    <string name="theme_window">창</string>
    <string name="theme_sky_day">하늘(낮)</string>
    <string name="theme_sky_night">하늘(밤)</string>
    <string name="signup">회원가입</string>
    <string name="email">이메일</string>
    <string name="nickname">닉네임</string>
    <string name="password">비밀번호</string>
    <string name="passwordC">비밀번호 확인</string>
    <string name="certification">인증번호</string>
    <string name="cert">인증</string>
    <string name="signup_val1">닉네임은 2자~8자 이내여야 합니다</string>
    <string name="signup_val3">비밀번호는 8자~16자 이내여야 합니다</string>
    <string name="signin">로그인</string>
    <string name="find_password">비밀번호를 잊어버렸어요</string>
    <string name="sign_yet1">아직 회원이 아니신가요?</string>
    <string name="sign_yet2">가입하기</string>
    <string name="forgot_password">비밀번호 찾기</string>
    <string name="find_password_email">회원가입 시 사용한 이메일을 입력해주세요</string>
    <string name="new_password">새 비밀번호 설정하기</string>
    <string name="new_pass1">비밀번호 재설정</string>
    <string name="new_pass2">비밀번호 변경</string>
    <string name="withdrawal_title">계정 삭제</string>
    <string name="withdrawal_message">계정 삭제를 진행하시겠습니까? 모든 데이터가 삭제됩니다.</string>
    <string name="splash">하루 한 장\n하루 한 스쿱</string>
    <string name="splash_content_description">아이스크림 트럭</string>
    <string name="et_input_hint">내용을 입력해주세요</string>
    <string name="checkout_these_diaries">최근 작성한 일기 보러가기</string>
    <string name="toast_emotion_limit_3">감정은 최대 세 개까지 선택할 수 있어요.</string>
    <string name="dialog_sign_out_message">로그아웃 하시겠습니까?</string>
    <string name="signup_val2">비밀번호와 비밀번호 확인이 같아야 합니다</string>
    <string name="dialog_time_pick_title">알림 시간 설정</string>
    <string name="dialog_dday_title">날짜를 선택하세요</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="require_permission_message">요청을 수행하기 위해 접근 권한이 필요합니다.</string>
    <string name="no_selected_image">선택된 이미지가 없습니다</string>
    <string name="app_backbutton_finish">\'뒤로\'버튼 한 번 더 누르시면 종료됩니다.</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="open_source_license">오픈소스 라이센스</string>
    <string name="setting_display">화면</string>
    <string name="setting_font">글꼴 크기와 스타일</string>
    <string name="setting_calendar">달력 아이콘</string>
    <string name="lock_message">암호를 잊을 경우 앱을 삭제하고 재설치 해야합니다.</string>
    <string name="title_bookmark">북마크</string>

</resources>