<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="290dp"
    android:layout_height="wrap_content"
    android:background="@drawable/white_rectangle">

    <TextView
        android:id="@+id/tv_withdraw_dlg_title"
        style="@style/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_emotion_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gv_emotions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_content_border_margin_big"
        android:layout_marginTop="@dimen/vertical_title_content_margin_reg"
        android:columnCount="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_withdraw_dlg_title">

        <Button
            style="@style/text_small_black"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:background="@color/transparent"
            android:drawableTop="@drawable/happy_small"
            android:text="@string/emotion_happy" />

        <Button
            style="@style/text_small_black"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:background="@color/transparent"
            android:drawableTop="@drawable/relax_small"
            android:text="@string/emotion_relax" />

        <Button
            style="@style/text_small_black"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:background="@color/transparent"
            android:drawableTop="@drawable/angry_small"
            android:text="@string/emotion_angry" />

        <Button
            style="@style/text_small_black"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:background="@color/transparent"
            android:drawableTop="@drawable/fun_small"
            android:text="@string/emotion_fun" />

        <Button
            style="@style/text_small_black"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:background="@color/transparent"
            android:drawableTop="@drawable/joy_small"
            android:text="@string/emotion_joy" />

        <Button
            style="@style/text_small_black"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:background="@color/transparent"
            android:drawableTop="@drawable/sound_small"
            android:text="@string/emotion_sound" />

        <Button
            style="@style/text_small_black"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:background="@color/transparent"
            android:drawableTop="@drawable/excitement_small"
            android:text="@string/emotion_hopeful" />

        <Button
            style="@style/text_small_black"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:background="@color/transparent"
            android:drawableTop="@drawable/bored_small"
            android:text="@string/emotion_bored" />

        <Button
            style="@style/text_small_black"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:background="@color/transparent"
            android:drawableTop="@drawable/sad_small"
            android:text="@string/emotion_sad" />

        <Button
            style="@style/text_small_black"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:background="@color/transparent"
            android:drawableTop="@drawable/nervous_small"
            android:text="@string/emotion_nervous" />

        <Button
            style="@style/text_small_black"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:background="@color/transparent"
            android:drawableTop="@drawable/tired_small"
            android:text="@string/emotion_tired" />

        <Button
            style="@style/text_small_black"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:background="@color/transparent"
            android:drawableTop="@drawable/anxious_small"
            android:text="@string/emotion_anxious" />
    </GridLayout>


    <Button
        android:id="@+id/btn_withdraw_dlg_cancel"
        style="@style/btn_text_black"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/vertical_title_content_margin_reg"
        android:background="@drawable/button_cancel"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_withdraw_dlg_ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gv_emotions" />

    <Button
        android:id="@+id/btn_withdraw_dlg_ok"
        style="@style/btn_text_white"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/button_confirm"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_withdraw_dlg_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>