<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="290dp"
    android:layout_height="wrap_content"
    android:background="@drawable/white_rectangle">

    <TextView
        android:id="@+id/tv_withdraw_dlg_title"
        style="@style/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_withdrawal_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_withdraw_dlg_detail"
        style="@style/dialog_tv_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="20dp"
        android:text="@string/dialog_withdrawal_message"
        app:layout_constraintEnd_toEndOf="@id/tv_withdraw_dlg_title"
        app:layout_constraintStart_toStartOf="@id/tv_withdraw_dlg_title"
        app:layout_constraintTop_toBottomOf="@id/tv_withdraw_dlg_title" />

    <Button
        android:id="@+id/btn_withdraw_dlg_cancel"
        style="@style/btn_text_black"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_cancel"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_withdraw_dlg_ok"
        app:layout_constraintTop_toBottomOf="@id/tv_withdraw_dlg_detail" />

    <Button
        android:id="@+id/btn_withdraw_dlg_ok"
        style="@style/btn_text_white"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/button_confirm"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_withdraw_dlg_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>